# opengl-playground

./: CMakeLists.txt  README.md  local-build.cmd
.github/workflows/: build.yml
src/: main.cpp  main_v2.cpp
